--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -129,8 +129,7 @@
                 <input type="password" id="inputPassword" class="form-control" placeholder="비밀번호" required>
               </div>
 
-              <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">일반 로그인</button>
-              <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">업체 로그인</button>
+              <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">로그인</button>
               
               <button class="btn btn-lg btn-primary btn-block text-uppercase" type="button" onclick="location.href='search.html'">아이디/비밀번호 찾기</button>
               
