--- a/WebContent/out.html
+++ b/WebContent/out.html
@@ -110,7 +110,7 @@
 		</div>
 	</header>
 	
-<form onsubmit="return false;">
+<form  method = "post" action="room.do">
     <div class="wrap-950 add-container">
         <div class="content left-content">
 
@@ -213,7 +213,7 @@
                 <tr>
                     <th>크기</th>
                     <td>
-                        <div class="mb-5">전용면적 : <input type="text" id="pyeong"/>평
+                        <div class="mb-5">전용면적 : <input type="text" name="pyeong"/>평
                     </td>
                 </tr>
                 <tr>
