--- a/WebContent/register2.html
+++ b/WebContent/register2.html
@@ -4,7 +4,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>King &mdash; Free Website Template, Free HTML5 Template by gettemplates.co</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width
+	=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by gettemplates.co" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
 	<meta name="author" content="gettemplates.co" />
@@ -143,7 +144,7 @@
               </div>
               
               <div class="form-label-group">
-                <input type="tel" name="phone" class="form-control" placeholder="전화번호" required autofocus>
+                <input type="text" name="phone" class="form-control" placeholder="전화번호" required autofocus>
               </div>
               
               <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">회원가입</button>
