--- a/WebContent/register2.html
+++ b/WebContent/register2.html
@@ -121,7 +121,7 @@
         <div class="card card-signin my-5">
           <div class="card-body">
             <h5 class="card-title text-center">일반 회원가입</h5>
-            <form class="form-signin" action="register2.do" method="post">
+            <form class="form-signin" action="JoinAction.to" method="post">
              
              <div class="form-label-group">
                 <input type="text" name="name" class="form-control" placeholder="이름" required autofocus>
