일반, 업체 회원가입

--- a/WebContent/out.html
+++ b/WebContent/out.html
@@ -121,7 +121,7 @@
 			</div>
 		</header>
 
-		<form action="./RoomOut.do" method="post"
+		<form action="RoomOutAction.do" method="post"
 			enctype="multipart/form-data" name="boardform">
 			<div class="wrap-950 add-container">
 				<div class="content left-content">
