--- a/WebContent/out.html
+++ b/WebContent/out.html
@@ -55,11 +55,19 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-<script language="javascript">
-	function addboard(){
-		boardform.submit();
+<script type="text/javascript">
+ 
+function checkDisable(form)
+{
+    if( form.MPAY_none.checked == true ){
+    	form.MPAY.value ="없음";
+    	form.MPAY.disabled = true;
+} else {
+	form.MPAY.value ="";
+	form.MPAY.disabled = false;
 	}
-	</script>
+}
+</script>
 
 </head>
 <body>
@@ -121,8 +129,7 @@
 			</div>
 		</header>
 
-		<form action="./RoomOut.do" method="post"
-			enctype="multipart/form-data" name="boardform">
+		<form action="RoomOutAction.do" method="post" name="boardform">
 			<div class="wrap-950 add-container">
 				<div class="content left-content">
 
@@ -136,32 +143,21 @@
 
 						<div class="item-photo" id="add-photo-box">
 							<ul class="ui-sortable">
-								<li id="li1" class="ui-sortable-handle"><span
-									class="i-count">1</span>
-									<button class="i-btn" type="button" name="IMAGE1" value="true"
-										data-index="0" style="z-index: 1;">+등록</button> <em
-									class="i-tit">대표사진</em></li>
-								<li id="li2" class="ui-sortable-handle"><span
-									class="i-count">2</span>
-									<button class="i-btn" type="button" name="IMAGE2" value="true"
-										data-index="1" style="z-index: 1;">+등록</button> <em
-									class="i-tit">화장실</em></li>
-								<li id="li3" class="ui-sortable-handle"><span
-									class="i-count">3</span>
-									<button class="i-btn" type="button" name="IMAGE3" value="true"
-										data-index="2" style="z-index: 1;">+등록</button> <em
-									class="i-tit">주방</em></li>
-								<li id="li4" class="ui-sortable-handle"><span
-									class="i-count">4</span>
-									<button class="i-btn" type="button" name="IMAGE4"
-										data-index="3" style="z-index: 1;">+등록</button> <em
-									class="i-tit">방사진</em></li>
-								<li id="li5" class="ui-sortable-handle"><span
-									class="i-count">5</span>
-									<button class="i-btn" type="button" name="IMAGE5"
-										data-index="4" style="z-index: 1;">+등록</button> <em
-									class="i-tit">방사진</em></li>
-
+								<li id="li1" class="ui-sortable-handle"><span class="i-count">1</span>
+									<button class="i-btn" type="button" name="IMAGE1" value="true" data-index="0" style="z-index: 1;">
+									+등록</button> <em class="i-tit">대표사진</em></li>
+								<li id="li2" class="ui-sortable-handle"><span class="i-count">2</span>
+									<button class="i-btn" type="button" name="IMAGE2" value="true" data-index="1" style="z-index: 1;">
+									+등록</button> <em class="i-tit">화장실</em></li>
+								<li id="li3" class="ui-sortable-handle"><span class="i-count">3</span>
+									<button class="i-btn" type="button" name="IMAGE3" value="true" data-index="2" style="z-index: 1;">
+									+등록</button> <em class="i-tit">주방</em></li>
+								<li id="li4" class="ui-sortable-handle"><span class="i-count">4</span>
+									<button class="i-btn" type="button" name="IMAGE4" data-index="3" style="z-index: 1;">
+									+등록</button> <em class="i-tit">방사진</em></li>
+								<li id="li5" class="ui-sortable-handle"><span class="i-count">5</span>
+									<button class="i-btn" type="button" name="IMAGE5" data-index="4" style="z-index: 1;">
+									+등록</button> <em class="i-tit">방사진</em></li>
 							</ul>
 						</div>
 					</div>
@@ -171,61 +167,54 @@
 						<tbody>
 							<tr>
 								<th>주소</th>
-								<td colspan="3"><input type="text"
-									style="width: 350px; position: relative;">
+								<td colspan="3"><input type="text" style="width: 350px; height:25px; position: relative;" name="ADDRESS">
 									<div class="i-txt">
 										· 주소 입력 시에는 동/읍/면 으로 검색해 주세요. 예) 자곡동, 동읍면, 신월읍<br>
 									</div></td>
 							</tr>
 							<tr>
 								<th>보증금</th>
-								<td><input type="text" class="text" name="DEPOSIT"
-									onkeydown="return number_validate1(event);"> 만원 <span
-									class="fc-red1">※무보증일 경우, 한 달 월세를 입력하세요</span></td>
+								<td><input type="text" class="text" name="DEPOSIT"> 만원 <span class="fc-red1">※무보증일 경우, 한 달 월세를 입력하세요</span></td>
 							</tr>
 							<tr>
 								<th>월세</th>
-								<td><input type="text" class="text" name="RENT"
-									onkeydown="return number_validate1(event);"> 만원 <span
-									class="fc-red1">※전세일 경우, 0을 입력 하세요</span></td>
+								<td><input type="text" class="text" name="RENT"> 만원 <span class="fc-red1">※전세일 경우, 0을 입력 하세요</span></td>
 							</tr>
 							<tr>
 								<th>방구조</th>
 								<td><select style="width: 180px" name="ROOMTYPE">
 										<option value="">선택하세요</option>
-										<option value="01">오픈형 원룸 (방1)</option>
-										<option value="02">분리형 원룸 (방1, 거실1)</option>
-										<option value="03">복층형 원룸</option>
-										<option value="04">투룸 (방2, 거실1)</option>
+										<option value="오픈형 원룸 (방1)">오픈형 원룸 (방1)</option>
+										<option value="분리형 원룸 (방1, 거실1)">분리형 원룸 (방1, 거실1)</option>
+										<option value="복층형 원룸">복층형 원룸</option>
+										<option value="투룸 (방2, 거실1)">투룸 (방2, 거실1)</option>
 								</select></td>
 							</tr>
 
 							<tr>
 								<th>관리비</th>
-								<td><input type="text" class="text" name="fee"
-									onkeydown="return number_validate2(event);"> 만원
-									&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp; <label><input
-										type="checkbox" id="fee_none" name="fee_none"> 없음</label>
+								<td><input type="text" class="text" name="MPAY" id="MPAY"> 만원
+									&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp; 
+									<label><input type="checkbox" id="MPAY_none" name="MPAY_none" onClick="checkDisable(this.form)"> 없음</label>
 									<p class="i-gray">
 										<strong>관리비 포함 항목</strong> <label><input
-											name="fee_inc" type="checkbox" value="01"> 전기세</label> <label><input
-											name="fee_inc" type="checkbox" value="02"> 가스</label> <label><input
-											name="fee_inc" type="checkbox" value="03"> 수도</label> <label><input
-											name="fee_inc" type="checkbox" value="04"> 인터넷</label> <label><input
-											name="fee_inc" type="checkbox" value="05"> TV</label>
+											name="MPAY2" type="checkbox" value="전기세"> 전기세</label> <label><input
+											name="MPAY2" type="checkbox" value="가스"> 가스</label> <label><input
+											name="MPAY2" type="checkbox" value="수도"> 수도</label> <label><input
+											name="MPAY2" type="checkbox" value="인터넷"> 인터넷</label> <label><input
+											name="MPAY2" type="checkbox" value="TV"> TV</label>
 									</p></td>
 							</tr>
 							
 							<tr>
 								<th>크기</th>
 								<td>
-									<div class="mb-5">
-										전용면적 : <input type="text" name="pyeong" />평
+										전용면적 : <input type="text" style="width:50px; margin-right:5px;"name="RSIZE" />평
 								</td>
 							</tr>
 							<tr>
 								<th>층수</th>
-								<td>해당 층 : <select name="room_floor">
+								<td>해당 층 : <select name="FLOOR">
 										<option value="">선택하세요</option>
 										<option value="반지하">반지하</option>
 										<option value="옥탑방">옥탑방</option>
@@ -275,36 +264,34 @@
 							<tr>
 								<th>주차</th>
 								<td class="has-col"><label><input type="radio"
-										name="parking" value="가능"> 가능</label> <label><input
-										type="radio" name="parking" value="불가능"> 없음</label>
+										name="PARKING" value="가능"> 가능</label> <label><input
+										type="radio" name="PARKING" value="없음"> 없음</label>
 									<div class="i-col">
 										<strong>엘리베이터</strong> <label><input type="radio"
-											name="building_elevator" value="true"> 있음</label> <label><input
-											type="radio" name="building_elevator" value="false">
+											name="ELVE" value="있음"> 있음</label> <label><input
+											type="radio" name="ELVE" value="없음">
 											없음</label>
 									</div></td>
 							</tr>
 							<tr></tr>
 							<tr>
 								<th>입주가능일</th>
-								<td><input type="text" class="text max" name="movein_date">
+								<td><input type="text" class="text max" name="RDATE">
 								</td>
 							</tr>
 							<tr>
 								<th>제목</th>
-								<td><input type="text" class="text max" name="title">
+								<td><input type="text" class="text max" name="TITLE">
 								</td>
 							</tr>
 							<tr>
 								<th>상세설명</th>
-								<td><textarea name="description" class="description"
+								<td><textarea name="CONTENT" class="description"
 										placeholder="해당 방에 대한 특징과 소개를 최소 50자 이상 입력해야 합니다.
 														방의 위치와 교통, 주변 편의시설, 방의 특징과 장점, 보안시설, 옵션, 주차, 전체적인
 														방의 느낌 등을 작성해 주세요.      
-														
 														다른 방에 대한 설명, 연락처, 홍보 메시지 등 해당 방과 관련없는 내용을 입력하거나 
-														해당 방에 대한 설명이 부적절할 경우 중개가 종료될 수 있습니다.
-                                  "></textarea>
+														해당 방에 대한 설명이 부적절할 경우 중개가 종료될 수 있습니다."></textarea>
 
 								</td>
 							</tr>
