--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -126,7 +126,7 @@
               </div>
 
               <div class="form-label-group">
-                <input type="password" name="password" class="form-control" placeholder="비밀번호" required>
+                <input type="password" name="pwd class="form-control" placeholder="비밀번호" required>
               </div>
 
               <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">로그인</button>
