--- a/WebContent/out.html
+++ b/WebContent/out.html
@@ -157,10 +157,10 @@ $(function(){
     
 <script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
 
-<link rel="stylesheet" href="./js/jquery-ui.min.css">
+<link rel="stylesheet" href="./jquery-ui-1.12.1/jquery-ui.min.css">
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<script src="./js/jquery-ui.min.js"></script>
-<script src="./js/datepicker-ko.js"></script>
+<script src="./jquery-ui-1.12.1/jquery-ui.min.js"></script>
+<script src="./jquery-ui-1.12.1/datepicker-ko.js"></script>
 
 </head>
 <body>
