--- a/WebContent/register2.html
+++ b/WebContent/register2.html
@@ -66,7 +66,7 @@
 					if(result == 1) {
 						$('#idCheckMessage').html('사용가능한 아이디입니다.').css("color", "green");
 					} else {
-						$('#idCheckMessage').html('사용이 불가능한 아이디입니다.').css("color", "red");
+						$('#idCheckMessage').html('이미 있는 아이디입니다.').css("color", "red");
 					}
 				}
 			})
