--- a/WebContent/out.html
+++ b/WebContent/out.html
@@ -54,11 +54,12 @@
 <!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
+<!-- 구글 맵 api (사용안함) -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPiMMsJJAPPXRXq7jFuXCfn_WXbGdsIgw&libraries=places&callback=initMap"
     async defer></script>
-    
+<!-- 우편번호 및 주소 받아오기 -->
 <script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
-
+<!-- 입주 가능 입력 캘린더 (아직 미사용) -->
 <link rel="stylesheet" href="./jquery-ui-1.12.1/jquery-ui.min.css">
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="./jquery-ui-1.12.1/jquery-ui.min.js"></script>
@@ -76,7 +77,7 @@ function checkDisable(form)
 	form.MPAY.disabled = false;
 	}
 }
-//이미지 안됨
+//이미지
 $(function () {
 	$('#btn-upload').click(function(e) {
 			e.preventDefault();
@@ -107,7 +108,7 @@ $(function () {
 			$('#file5').click();
 		});
 	});
-	//주소정보
+//주소정보
 function sample4_execDaumPostcode() {
     new daum.Postcode({
         oncomplete: function(data) {
@@ -185,12 +186,13 @@ $(function(){
 
 </head>
 <body>
-<input type="text" name="date" id="date1" size="12" />
+<!-- 달력 테스트 사용 코드 -->
+<!-- <input type="text" name="date" id="date1" size="12" />
 <br/>
 <input type="text" name="date" id="date2" size="12" />
 <br/>
 <input type="text" name="date" id="date3" size="12" />
-<input type="button" value="달력" onclick="$('#date3').datepicker('show');" />
+<input type="button" value="달력" onclick="$('#date3').datepicker('show');" /> -->
 
 	<div id="page">
 		<nav class="fh5co-nav" role="navigation">
@@ -440,8 +442,6 @@ $(function(){
 					</table>
 
 					<div class="add-btn m-bottom-20">
-
-
 						<button type="submit" class="btn btn-orange" id="add_room">
 							<span id="btn_complete">방 내놓기</span>
 						</button>
