--- a/WebContent/register2.html
+++ b/WebContent/register2.html
@@ -83,16 +83,62 @@
 		}
 		
 		function validate() {
-			var re = /^[a-zA-Z0-9]{4,12}$/;
-			var rePhone = /^01([0|1|6|7|8|9]?)-?([0-9]{3,4})-?([0-9]{4})$/;
-			
-			var id = $( '#id' ).val();
-			var pwd = $( '#pwd1' ).val();
-			var email = $( '#email' ).val();
-			var phone = $( '#phone' ).val();
-			
+
+			// 이메일검사
+
+			// 4글자이상(\w=[a-zA-Z0-9_],[\w-]:'-'까지는 허용) @가 나오고
+
+			// hanmail.net, naver.com, lycos.co.kr, iei.or.kr
+
+			// 1글자 이상(주소).글자 가 1~3번 반복
+
+			var userid = document.getElementById("userid");
+
+			// 첫글자는 반드시 영문소문자, 4~12자로 이루어지고, 숫자가  하나 이상 포함되어야한다.
+
+			// 영문소문자와 숫자로만 이루어져야 한다.
+
+			// \d : [0-9]와 같다. {n,m} : n에서 m사이
+
+			if (!chk(/^[a-z][a-z\d]{3,11}$/, userid, "잘못된 형식의 ID입니다."))
+				return false;
+
+			if (!chk(/[\d]/, userid, "잘못된 형식의 ID입니다."))
+				return false;
+
+			//alert(re.test(userid.value));
+
+			var pwd = document.getElementById("pwd1");
+
+
+
+			var email = document.getElementById("email");
+
+			if (!chk(/^[\w-]{4,}@[\w-]+(\.\w+){1,3}$/, email,
+					"이메일 형식이 잘못되었습니다."))
+				;
+
+			var email = document.getElementById("email");
+
+			//return false;
+
 		}
-		
+
+		function chk(re, e, msg) {
+
+			if (re.test(e.value))
+				return true;
+
+			alert(msg);
+
+			e.value = "";
+
+			e.focus();
+
+			return false;
+
+		}
+
 	</script>
 	
 	</head>
@@ -162,7 +208,7 @@
         <div class="card card-signin my-5">
           <div class="card-body">
             <h5 class="card-title text-center">일반 회원가입</h5>
-            <form class="form-signin" action="JoinAction.to" method="post">
+            <form class="form-signin" action="JoinAction.to" method="post" onsubmit="return validate();">
              
              <div class="form-label-group">
                 <input type="text" name="name" class="form-control" placeholder="이름" required autofocus>
