--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -46,7 +46,7 @@
 						<li class="has-dropdown">
 							<a href="">원룸</a>
 							<ul class="dropdown">
-								<li><a href="#">원룸 검색</a></li>
+								<li><a href="kakaomap_test/kakaomap_v1.09_reply11.jsp">원룸 검색</a></li>
 								<li><a href="#">상세 검색</a></li>
 							</ul>
 						</li>
