--- a/WebContent/register3.html
+++ b/WebContent/register3.html
@@ -157,7 +157,7 @@
               </div>
               
               <div class="form-label-group">
-                <input type="text" name="cname" class="form-control" placeholder="업체 이름" required autofocus>
+                <input type="text" name="cname" class="form-control" placeholder="업체 이름" required>
               </div>
              
               <div class="form-label-group">
