--- a/WebContent/out.html
+++ b/WebContent/out.html
@@ -419,7 +419,7 @@ $(function(){
 							<tr></tr>
 							<tr>
 								<th>입주가능일</th>
-								<td><input type="text" class="text max" name="RDATE">
+								<td><input type="date" class="text max" name="RDATE">
 								</td>
 							</tr>
 							<tr>
