--- a/WebContent/html/register3.html
+++ b/WebContent/html/register3.html
@@ -93,11 +93,11 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-2">
-					<div id="fh5co-logo"><a href="index.html">2조</a></div>
+					<div id="fh5co-logo"><a href="index.jsp">2조</a></div>
 				</div>
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
-						<li class="active"><a href="index.html">Home</a></li>
+						<li class="active"><a href="index.jsp">Home</a></li>
 						<li class="has-dropdown">
 							<a href="">원룸</a>
 							<ul class="dropdown">
