--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -48,13 +48,14 @@
 							<ul class="dropdown">
 								<li><a href="kakaomap_test/kakaomap_v1.09_reply11.jsp">원룸 검색</a></li>
 								<li><a href="#">상세 검색</a></li>
+								<li><a href="MemberList.to">회원 정보</a>
 							</ul>
 						</li>
 						<li class="has-dropdown">
 							<a href="">방 내놓기</a>
 							<ul class="dropdown">
 								<li><a href="#">매물 보기</a></li>
-								<li><a href="out.html">내 방 내놓기</a></li>
+								<li><a href="out.do">내 방 내놓기</a></li>
 							</ul>
 						</li>
 					
